# clemp

./: .gitignore  Cargo.toml  README.md  RELEASING.md  REPOMAP.md
src/: lib.rs  main.rs  tests.rs
tests/: clarg.rs  cli_parsing.rs  commands.rs  e2e_no_dirty_state.rs  filesystem.rs  githooks.rs  hooks.rs  language.rs  list.rs  mcp.rs  update.rs  update_unit.rs
tests/common/: mod.rs
