[package]
name = "clemp"
version = "0.2.0"
edition = "2024"

[dependencies]
anyhow = "1.0.100"
clap = { version = "4.5.54", features = ["derive"] }
minijinja = "2.14.0"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
serde_yaml = "0.9.34"

[dev-dependencies]
tempfile = "3.24.0"
